tests/invalid/Reference_Invalid_2.whiley
public export method test():
    &int x = new [1][0]